# libc-checks

./: Cargo.toml  build.rs  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs
